# project_slam_gs3lam

./: .env.serve  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  MODULE_TODO.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
.claude/: settings.json
.claude/rules/: boot-context.md  docker_setup.md  dual_backend.md  gpu-visor.sh  gpu_memory.md  gpu_readiness.md  next-steps-tracking.md  no-sleep-blocking.md  paper_pipeline.md  rules  save_checkpoint.md  training_monitor.md  training_pipeline.md  (+2 more)
configs/: default.toml  l4_replica.toml  ros2.toml
docker/: Dockerfile  Dockerfile.cuda  docker-compose.api.yml  docker-compose.yml
docs/: release_checklist.md
launch/: gs3lam.launch.py
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: build_rasterizer.py  build_rasterizer.sh  release_validate.sh  run_replica.py  run_train.sh  train_replica.py
tasks/: PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0701.md  PRD-0702.md  PRD-0703.md
tests/: test_api.py  test_config.py  test_datasets.py  test_decoder.py  test_eval_reports.py  test_mapping.py  test_metrics.py  test_regularization.py  test_release_checks.py  test_ros2_contracts.py  test_rskm.py  test_sg_field.py  test_tracking.py
(+44 files in other folders)
