[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima-slam-gs3lam"
version = "0.1.0"
description = "ANIMA SLAM-GS3LAM — GS3LAM: Gaussian Semantic Splatting SLAM"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "numpy>=1.26,<3",
    "opencv-python-headless>=4.10",
    "orjson>=3.10",
    "pillow>=10.0",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "natsort>=8.4",
    "torch>=2.2",
    "tqdm>=4.66",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
mlx = ["mlx>=0.15"]
cuda = [
    "torch>=2.2",
    "triton>=2.2; platform_system == 'Linux'",
]
dev = ["pytest>=8.2", "ruff>=0.6", "mypy>=1.10", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py311"
